# tteuniyu

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: p0a-cluster.yml  p0a-digest.yml  p0a-summarize.yml  p0a-weekly-digest.yml  p0a-worker.yml  p0w-harness.yml
apps/web/: .env.local.example  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/worker/: .env.example  README.md  pyproject.toml
apps/worker/src/tteuniyu_worker/: __init__.py  audit.py  cluster.py  cost_monitor.py  db.py  digest.py  digest_template.py  embed.py  extract.py  headline_filter.py  ingest.py  llm_validator.py  logging_setup.py  main.py  sources.py  summarize.py  topic_matcher.py  trust_signal.py  weekly_digest_template.py
apps/worker/tests/: test_digest.py  test_embed_cluster.py  test_llm_modules.py  test_sources.py  test_topic_matcher.py  test_weekly_digest.py
config/: affiliate_manual_curation.yaml  sources_whitelist.yaml
docs/: claude-code-prompts-v1.2.md  harness-roadmap-v1.3.md  harness-roadmap-v1.6.md  legal-consultation-request.md  p0w-exit-checklist.md  prd-v1.1.md  prd-v1.2.md  prd-v1.3.md  prd-v1.4.md  prd-v1.5.md  prd-v1.6.1-patch.md  prd-v1.6.2-patch.md  prd-v1.6.3-patch.md  prd-v1.6.4-patch.md  prd-v1.6.5-patch.md  prd-v1.6.md  prd-v1.7.1-patch.md  prd-v1.7.2-patch.md  prd-v1.7.3-patch.md  prd-v1.7.md  privacy-policy-draft.md  ticket-prompts-v1.3.md
docs/adr/: ADR-005-ad-zone-separation.md  ADR-006-native-widget-staged-entry.md  ADR-007-affiliate-commerce-data-boundary.md  ADR-008-trend-time-series-pipeline.md  ADR-009-ideological-labeling-as-auxiliary.md  ADR-010-positioning-issue-risk-os.md  ADR-011-hybrid-coin-subscription-monetization.md  ADR-013-headline-body-extraction.md  ADR-014-cost-optimized-ai-summary-pipeline.md  ADR-015-trust-signal-and-investment-risk-layer.md  ADR-016-privacy-and-data-boundary.md  ADR-017-daily-digest-email.md  ADR-018-custom-topic-tracking.md
docs/design-handoff/: README.md  design-brief.md  newsletter-design-brief.md  surface-checklist.md
docs/legal/: 2026-05-10-legal-response-opinion.md
docs/operations/: roadmap.md  setup-guide.md
docs/outsourcing/: ios-app-manus-prompt.md  ios-app-rfp.md
docs/research/: external-validation-prompts.md  p0w-state-of-the-system.md  syft-benchmark.md
docs/tickets/: T-006-rss-worker-foundation.md  T-W01-widget-web-mvp-scaffold.md  T-W02-embed-script.md  T-W03-waitlist-inquiry-forms.md  T-W04-adzone-affiliate-curation.md  T-W05-analytics-exit-dashboard.md
harness/: package.json  tsconfig.json
harness/checks/: README.md  assert-ad-zone-boundary.ts  assert-affiliate-link-provenance.ts  assert-analytics-events.ts  assert-db-grants.ts  assert-dispute-status-server-only.ts  assert-monetization-claims.ts  assert-native-widget-entry-condition.ts  assert-no-image-storage.ts  assert-no-naver-storage.ts  assert-realtime-naming.ts  (+8 more)
(+73 files in other folders)
